+ Improved: Order in which lands looks for chunk-distance option nearby lands at claiming
+ Improved: Delay tp failure message on redis upon server join